--- a/org.flameshot.flameshot.yml
+++ b/org.flameshot.flameshot.yml
@@ -29,5 +29,5 @@ modules:
     sources:
       - type: git
         url: https://github.com/flameshot-org/flameshot.git
-        branch: "v0.8.0"
-        commit: "017578e776cf8c24ae3cf81bd1bf44eb97185a25"
+        tag: "v0.8.3"
+        commit: "ceb51a90bd70ba7a97819e2218fdd5bf9dec2e59"
